notes links popup css fix now visible everywhere

--- a/src-unpack-to-chrome/notes/notes.css
+++ b/src-unpack-to-chrome/notes/notes.css
@@ -203,6 +203,8 @@ body {
   padding: 1em;
   border-radius: 1em;
   width: 30em;
+  height: 100vh;
+  overflow-y:scroll;
 }
 
 .highlight-link > a {
@@ -281,12 +283,23 @@ input {
   transform-style: preserve-3d;
 }
 
-code{
+pre {
+    background-color: #eee;
     font-family: monospace;
-    font-size: 0.9rem;
-    font-weight: 800;
-    background: #ddd;
-    border-radius: 1em;
-    padding: 1em;
-    margin:1em
+    padding: 0 1em;
+    line-height:2em;
+}
+
+code {
+    font-family: monospace;
+    font-weight:800;
+    background-color: #eee;
+    padding: 0.2em;
+}
+
+pre code {
+    border: none;
+    background: none;
+    font-size: 0.875em;
+    letter-spacing: normal;
 }
